rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@snuba-queries-QuerylogProcessor-snuba-queries__1__rate-limited-real.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"request\": {\n    \"id\": \"db4e2fc48df34d69be0ada66ab2ed2bd\",\n    \"body\": {\n      \"legacy\": true,\n      \"query\": \"redacted\",\n      \"dataset\": \"discover\",\n      \"app_id\": \"legacy\",\n      \"tenant_ids\": {\n        \"legacy\": \"legacy\"\n      },\n      \"parent_api\": \"/api/0/organizations/{organization_slug}/issues-count/\"\n    },\n    \"referrer\": \"search\",\n    \"team\": \"<unknown>\",\n    \"feature\": \"<unknown>\",\n    \"app_id\": \"legacy\"\n  },\n  \"dataset\": \"discover\",\n  \"entity\": \"discover_events\",\n  \"start_timestamp\": 1676674553,\n  \"end_timestamp\": 1677884153,\n  \"query_list\": [\n    {\n      \"sql\": \"redacted\",\n      \"sql_anonymized\": \"redacted\",\n      \"start_timestamp\": 1676674553,\n      \"end_timestamp\": 1677884153,\n      \"stats\": {\n        \"clickhouse_table\": \"errors_dist_ro\",\n        \"final\": false,\n        \"referrer\": \"search\",\n        \"sample\": 1,\n        \"totals_mode\": \"after_having_inclusive\",\n        \"merge_tree_max_rows_to_use_cache\": 1048576,\n        \"max_query_size\": 524288,\n        \"merge_tree_coarse_index_granularity\": 8,\n        \"max_execution_time\": 30,\n        \"max_threads\": 10,\n        \"merge_tree_min_rows_for_concurrent_read\": 163840,\n        \"max_streams_to_max_threads_ratio\": 1,\n        \"query_id\": \"3c369a12aedfa413840c5449a1573575\",\n        \"triggered_rate_limiter\": \"project_referrer\"\n      },\n      \"status\": \"rate-limited\",\n      \"trace_id\": \"095488ec34424e139d3c474992b21cc8\",\n      \"profile\": {\n        \"time_range\": 14,\n        \"table\": \"errors_dist_ro\",\n        \"all_columns\": [\n          \"errors_dist_ro._tags_hash_map\",\n          \"errors_dist_ro.deleted\",\n          \"errors_dist_ro.group_id\",\n          \"errors_dist_ro.project_id\",\n          \"errors_dist_ro.timestamp\"\n        ],\n        \"multi_level_condition\": false,\n        \"where_profile\": {\n          \"columns\": [\n            \"errors_dist_ro._tags_hash_map\",\n            \"errors_dist_ro.deleted\",\n            \"errors_dist_ro.group_id\",\n            \"errors_dist_ro.timestamp\"\n          ],\n          \"mapping_cols\": []\n        },\n        \"groupby_cols\": [\"errors_dist_ro.group_id\"],\n        \"array_join_cols\": []\n      },\n      \"result_profile\": null,\n      \"request_status\": \"table-rate-limited\",\n      \"slo\": \"against\"\n    }\n  ],\n  \"status\": \"rate-limited\",\n  \"request_status\": \"table-rate-limited\",\n  \"slo\": \"against\",\n  \"timing\": {\n    \"timestamp\": 1677884153,\n    \"duration_ms\": 102,\n    \"marks_ms\": {\n      \"cache_get\": 2,\n      \"cache_set\": 2,\n      \"get_configs\": 0,\n      \"prepare_query\": 56,\n      \"validate_schema\": 40\n    },\n    \"tags\": {}\n  },\n  \"projects\": [123123123],\n  \"snql_anonymized\": \"redacted\"\n}\n"
expression: snapshot_payload
---
[
  {
    "clickhouse_queries.all_columns": [
      [
        "errors_dist_ro._tags_hash_map",
        "errors_dist_ro.deleted",
        "errors_dist_ro.group_id",
        "errors_dist_ro.project_id",
        "errors_dist_ro.timestamp"
      ]
    ],
    "clickhouse_queries.array_join_columns": [
      []
    ],
    "clickhouse_queries.bytes": [
      0
    ],
    "clickhouse_queries.bytes_scanned": [
      0
    ],
    "clickhouse_queries.cache_hit": [
      0
    ],
    "clickhouse_queries.clickhouse_table": [
      "errors_dist_ro"
    ],
    "clickhouse_queries.consistent": [
      0
    ],
    "clickhouse_queries.duration_ms": [
      0
    ],
    "clickhouse_queries.final": [
      0
    ],
    "clickhouse_queries.groupby_columns": [
      [
        "errors_dist_ro.group_id"
      ]
    ],
    "clickhouse_queries.is_duplicate": [
      0
    ],
    "clickhouse_queries.max_threads": [
      10
    ],
    "clickhouse_queries.num_days": [
      14
    ],
    "clickhouse_queries.or_conditions": [
      0
    ],
    "clickhouse_queries.query_id": [
      "3c369a12aedfa413840c5449a1573575"
    ],
    "clickhouse_queries.sample": [
      1.0
    ],
    "clickhouse_queries.sql": [
      "redacted"
    ],
    "clickhouse_queries.stats": [
      "{\"clickhouse_table\":\"errors_dist_ro\",\"final\":false,\"max_execution_time\":30,\"max_query_size\":524288,\"max_streams_to_max_threads_ratio\":1,\"max_threads\":10,\"merge_tree_coarse_index_granularity\":8,\"merge_tree_max_rows_to_use_cache\":1048576,\"merge_tree_min_rows_for_concurrent_read\":163840,\"query_id\":\"3c369a12aedfa413840c5449a1573575\",\"referrer\":\"search\",\"sample\":1,\"totals_mode\":\"after_having_inclusive\",\"triggered_rate_limiter\":\"project_referrer\"}"
    ],
    "clickhouse_queries.status": [
      "rate-limited"
    ],
    "clickhouse_queries.trace_id": [
      "095488ec-3442-4e13-9d3c-474992b21cc8"
    ],
    "clickhouse_queries.where_columns": [
      [
        "errors_dist_ro._tags_hash_map",
        "errors_dist_ro.deleted",
        "errors_dist_ro.group_id",
        "errors_dist_ro.timestamp"
      ]
    ],
    "clickhouse_queries.where_mapping_columns": [
      []
    ],
    "dataset": "discover",
    "duration_ms": 102,
    "offset": 1,
    "organization": null,
    "partition": 0,
    "projects": [
      123123123
    ],
    "referrer": "search",
    "request_body": "{\n      \"legacy\": true,\n      \"query\": \"redacted\",\n      \"dataset\": \"discover\",\n      \"app_id\": \"legacy\",\n      \"tenant_ids\": {\n        \"legacy\": \"legacy\"\n      },\n      \"parent_api\": \"/api/0/organizations/{organization_slug}/issues-count/\"\n    }",
    "request_id": "db4e2fc4-8df3-4d69-be0a-da66ab2ed2bd",
    "status": "rate-limited",
    "timestamp": 1677884153
  }
]
